Ensure links are underlined for better visibility

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -80,11 +80,11 @@ p {
 
 a {
   color: inherit;
-  text-decoration: none;
-  transition: text-decoration $transition-quick;
+  text-decoration: underline;
+  transition: opacity $transition-quick;
 
   &:hover {
-    text-decoration: none;
+    text-decoration: underline;
     opacity: 0.7;
   }
 
